@@ -342,6 +342,10 @@ PANOPTICON_DBBACKUP_MAXFILES=15
 # Is Panopticon allowed to send email?
 PANOPTICON_MAIL_ONLINE=true
 
+# Immedate Email Sending
+# True (default) to send all emails immediately. False to enqueue emails for batch sending.
+PANOPTICON_IMMEDIATE_EMAIL=true
+
 # Inline Images in Email
 # Should Panopticon try to attach images in the emails it sends? When disabled
 # the images will be linked to. When enabled the images are included in the
