@@ -1015,6 +1015,8 @@ PANOPTICON_SYSCONFIG_LBL_FIELD_DBSSLKEY=Path to SSL/TLS Key File
 PANOPTICON_SYSCONFIG_LBL_FIELD_DBSSLCERT=Path to SSL/TLS Certificate File
 PANOPTICON_SYSCONFIG_LBL_FIELD_DBSSLVERIFYSERVERCERT=Verify SSL/TLS Server Certificates
 PANOPTICON_SYSCONFIG_LBL_FIELD_MAIL_ONLINE=Mail Sending
+PANOPTICON_SYSCONFIG_LBL_FIELD_IMMEDIATE_EMAIL="Immediate Email Sending"
+PANOPTICON_SYSCONFIG_LBL_FIELD_IMMEDIATE_EMAIL_HELP="Enable to sends emails right when they are generated. Disable to enqueue emails for batch sending at a later time. If you have dozens to hundreds of recipients for every email you should disable this option to prevent timeouts."
 PANOPTICON_SYSCONFIG_LBL_FIELD_MAIL_INLINE_IMAGES=Inline Images in Email
 PANOPTICON_SYSCONFIG_LBL_FIELD_MAILER=Mail Handler
 PANOPTICON_SYSCONFIG_LBL_FIELD_MAILFROM=Sender Address
