@@ -11,6 +11,7 @@ defined('AKEEBA') || die;
 
 use Akeeba\Panopticon\Container;
 use Akeeba\Panopticon\Library\Queue\QueueItem;
+use Akeeba\Panopticon\Library\Queue\QueueTypeEnum;
 use Akeeba\Panopticon\Library\Task\Status;
 use Akeeba\Panopticon\Model\Site;
 use Akeeba\Panopticon\Model\Task;
@@ -89,7 +90,7 @@ trait EnqueueExtensionUpdateTrait
 	): bool
 	{
 		// Enqueue necessary updates
-		$queueKey = sprintf('extensions.%d', $site->id);
+		$queueKey = sprintf(QueueTypeEnum::EXTENSIONS->value, $site->id);
 		$queue    = $this->container->queueFactory->makeQueue($queueKey);
 
 		// Avoid enqueueing the same extension multiple times
