@@ -2,6 +2,7 @@
 Akeeba Panopticon 1.0.5
 ================================================================================
 + Detect stuck extension updates and allow rescheduling, or canceling [gh-304]
++ Allow immediate email sending [gh-306]
 
 Akeeba Panopticon 1.0.4
 ================================================================================
